Fix Prettier Config in package.json

--- a/chronos-app/package.json
+++ b/chronos-app/package.json
@@ -75,7 +75,7 @@
   "private": true,
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
-      "prettier --write",
+      "prettier --write .",
       "eslint --fix"
     ]
   }
