--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,12 @@
 {
+  "[typescript]": {
+    "editor.defaultFormatter": "denoland.vscode-deno"
+  },
+  "deno.enable": true,
   "deno.enablePaths": [
     "supabase/functions"
   ],
+  "deno.importMap": "./supabase/functions/import_map.json",
   "deno.lint": true,
   "deno.unstable": [
     "bare-node-builtins",
@@ -17,8 +22,5 @@
     "fs",
     "http",
     "net"
-  ],
-  "[typescript]": {
-    "editor.defaultFormatter": "denoland.vscode-deno"
-  }
+  ]
 }
