--- a/chronos-app/package.json
+++ b/chronos-app/package.json
@@ -21,6 +21,7 @@
     "@gorhom/bottom-sheet": "^5",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
+    "date-fns": "^4.1.0",
     "expo": "~52.0.11",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
@@ -41,6 +42,7 @@
     "react-native-calendars": "^1.1307.0",
     "react-native-css-interop": "^0.1.22",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-pager-view": "^6.6.1",
     "react-native-reanimated": "~3.16.3",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
