--- a/package.json
+++ b/package.json
@@ -1,10 +1,20 @@
 {
-	"dependencies": {
-		"@supabase/supabase-js": "^2.47.10",
-		"drizzle-orm": "^0.38.3",
-		"postgres": "^3.4.5"
-	},
-	"devDependencies": {
-		"drizzle-kit": "^0.30.1"
-	}
+  "name": "chronos",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@supabase/supabase-js": "^2.48.1",
+    "drizzle-kit": "^0.30.4",
+    "drizzle-orm": "^0.39.2",
+    "hono": "^4.7.0",
+    "postgres": "^3.4.5",
+    "zod": "^3.24.1"
+  }
 }
