--- a/chronos-app/package.json
+++ b/chronos-app/package.json
@@ -19,6 +19,7 @@
     "@babel/runtime": "^7.26.0",
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^5",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
     "expo": "~52.0.11",
@@ -45,9 +46,11 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-svg": "^15.10.1",
+    "react-native-tab-view": "^4.0.5",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.2",
+    "zod": "^3.24.1",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
