--- a/package.json
+++ b/package.json
@@ -10,11 +10,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^9.5.0",
+    "@neondatabase/serverless": "^0.10.4",
     "@supabase/supabase-js": "^2.48.1",
-    "drizzle-kit": "^0.30.4",
+    "@vercel/postgres": "^0.10.0",
+    "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.2",
+    "drizzle-seed": "^0.3.1",
     "hono": "^4.7.0",
     "postgres": "^3.4.5",
+    "uuid": "^11.0.5",
     "zod": "^3.24.1"
+  },
+  "devDependencies": {
+    "@tsconfig/node18": "^18.2.4",
+    "drizzle-kit": "^0.30.4",
+    "typescript": "^5.7.3"
   }
 }
