--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "db:push": "drizzle-kit push",
+    "db:seed": "tsx supabase/seeding/indexSeeding.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@faker-js/faker": "^9.5.0",
     "@neondatabase/serverless": "^0.10.4",
     "@supabase/supabase-js": "^2.48.1",
     "@vercel/postgres": "^0.10.0",
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@tsconfig/node18": "^18.2.4",
     "drizzle-kit": "^0.30.4",
+    "tsx": "^4.19.2",
     "typescript": "^5.7.3"
   }
 }
