--- a/chronos-app/package.json
+++ b/chronos-app/package.json
@@ -68,6 +68,7 @@
     "jest-expo": "~52.0.2",
     "lint-staged": "^15.2.11",
     "prettier": "^3.4.2",
+    "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.3.1",
     "tailwindcss": "^3.4.15",
     "typescript": "^5.3.3"
