--- a/chronos-app/package.json
+++ b/chronos-app/package.json
@@ -41,6 +41,8 @@
     "react-native-calendars": "^1.1307.0",
     "react-native-css-interop": "^0.1.22",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-paper": "^5.13.1",
+    "react-native-paper-dates": "^0.22.34",
     "react-native-reanimated": "~3.16.3",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
