Add: clearDay & copyDay

--- a/supabase/functions/daily/deno.json
+++ b/supabase/functions/daily/deno.json
@@ -1,6 +1,7 @@
 {
   "imports": {
     "drizzle-orm/": "npm:/drizzle-orm/",
-    "postgres": "npm:/postgres"
+    "postgres": "npm:/postgres",
+    "zod": "npm:zod"
   }
 }
