--- a/chronos-app/package.json
+++ b/chronos-app/package.json
@@ -19,6 +19,7 @@
     "@babel/runtime": "^7.26.0",
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^5",
+    "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
@@ -39,8 +40,10 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.3",
+    "react-native-actions-sheet": "^0.9.7",
     "react-native-calendars": "^1.1307.0",
     "react-native-css-interop": "^0.1.22",
+    "react-native-date-picker": "^5.0.10",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.3",
     "react-native-safe-area-context": "4.12.0",
