--- a/chronos-app/package.json
+++ b/chronos-app/package.json
@@ -31,6 +31,7 @@
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.9",
     "expo-splash-screen": "~0.29.13",
+    "expo-sqlite": "^15.1.2",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.4",
